Fixed link hover color being invisible on footer

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -30,6 +30,7 @@ $info: $purple;
 $text: $text-color;
 $text-strong: $white;
 $footer-padding: 1.5rem 1.5rem 1.5rem;
+$link-hover: hsl(0, 0, 71%);
 
 html {
   font-size: 100%;
